[package]
name = "plonky2_por"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bigdecimal = "0.4.8"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
jemallocator = "0.5.4"
plonky2 = "1.0.2"
rayon = "1.10.0"
regex = "1.11.1"
rug = "1.27.0"
serde = "1.0.219"
serde_json = "1.0.140"
