[package]
name = "plonky2_por"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bigdecimal = "0.4.8"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
zstd = "0.13"
plonky2 = "1.0.2"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
signal-hook = "0.3.18"

[patch.crates-io]
crunchy = { git = "https://github.com/nmathewson/crunchy.git", branch = "cross-compilation-fix" }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5.4"
daemonize = "0.5.0"
interprocess = "2.2.3"